2009-12-19  Kentaro Sato <kentaro@ranvis.com>

	* timidity/readmidi.c: Fixed crash when loading long music.
	* timidity/output.[ch], timidity/timidity.c:
	  Fixed corruption of the default device encoding on some occasion.
	* timidity/output.[ch], timidity/w32_a.c:
	  Fixed Windows audio driver 24-bit output.
	* interface/w32g_syn.c: Better tray icon removal.

2009-10-04  Kentaro Sato <kentaro@ranvis.com>

	* doc/C/timidity.1, doc/ja_JP.eucJP/timidity.1,
	  timidity/reverb.[ch], timidity/timidity.c:
	  Added Freeverb parameter options to --reverb.
	* timidity/freq.c, timidity/sndfont.c:
	  Reduced warnings.

2009-03-16  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/readmidi.c (gloom_list):
	  Fix for GM2 drumch on program change
	* timidity/playmidi.c (midi_drumpart_change): Beautify

2009-03-15  Kentaro Sato <kentaro@ranvis.com>

	* timidity/miditrace.c:
	  Fix for Mac sound spectrum being out of sync in trace mode.
	* timidity/reverb.c:
	  Revert r1.69 change for panning delay that caused off-by-one.

2009-03-15  Kentaro Sato <kentaro@ranvis.com>

	* interface/w32g_c.c: Display errors reported on startup.
	* interface/w32g_utl.c: Add configuration fallbacks.
	* timidity/midi_a.c: Remove unused local variables.
	* timidity/sndfont.c:
	  CFG_FOR_SF_SUPPORT_FFT can be externally defined. (cfgforsf)

2009-03-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/ncurs_c.c, timidity/readmidi.c:
	  Fix to fit with MAX_CHANNELS > 32
	* timidity/playmidi.c (find_voice): Beautify

2008-12-06  Keishi Suenaga <skeishi@yahoo.co.jp>

	* configure.in: Fix mingw detection and replace wsock32 by ws2_32.
	* timidity/w32_libOggFLAC_dll.c: Small fix.
	* utils/getaddrinfo.c(new file), utils/Makefile.am, utils/net.c:
	  utils/net.h: Windows 2000 compatible network.

2008-05-22  Yair K. <cesium2@gmail.com>

	* interface/xaw_i.c: reinstate one line.

2008-05-22  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* utils/net.c: Fix for AI_ADDRCONFIG unsupported
